# qa_guru_python_18_poetry

./: README.md  pyproject.toml
